--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,18 @@
-# Configuración del servicio
+# User Service Configuration
+PORT=8083
 ENVIRONMENT=development
-PORT=8080
-LOG_LEVEL=debug
+LOG_LEVEL=info
 
-# Configuración de Vault
-VAULT_ADDR=http://localhost:8200
-VAULT_TOKEN=your-vault-token
-VAULT_PATH=secret/microservice
-
-# Configuración de base de datos
+# Database Configuration (SHARED with it-app_user)
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=your-db-password
-DB_NAME=microservice
-DB_SSL_MODE=disable
+DB_PASSWORD=postgres
+DB_NAME=itapp
 
-# API externa
-EXTERNAL_API_URL=https://api.example.com
-EXTERNAL_API_KEY=your-api-key
-EXTERNAL_API_TIMEOUT=30
+# Auth Service Integration
+AUTH_SERVICE_URL=http://localhost:8082
+
+# Rate Limiting
+RATE_LIMIT_RPS=100
+RATE_LIMIT_BURST=200
