--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Aplicación principal
   app:
@@ -11,31 +9,19 @@ services:
     env_file:
       - .env.local
     depends_on:
-      - postgres
-      - vault
+      - vault  # Remover postgres de aquí
     networks:
       - microservice-network
     restart: unless-stopped
 
-  # Base de datos PostgreSQL
-  postgres:
-    image: postgres:15-alpine
-    environment:
-      POSTGRES_DB: microservice_dev
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
-    networks:
-      - microservice-network
-    restart: unless-stopped
+  # Remover completamente la sección de postgres
+  # postgres:
+  #   image: postgres:15-alpine
+  #   ...
 
-  # Vault para manejo de secretos (desarrollo)
+  # Vault para manejo de secretos (opcional - puedes mantenerlo o removerlo)
   vault:
-    image: vault:latest
+    image: hashicorp/vault:1.14.0
     cap_add:
       - IPC_LOCK
     environment:
@@ -75,7 +61,7 @@ services:
     restart: unless-stopped
 
 volumes:
-  postgres_data:
+  # postgres_data:  # Remover este volumen
   vault_data:
   redis_data:
   prometheus_data:
