add codebuild env trigger

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -58,7 +58,7 @@ images:
 # Build options
 options:
   logging: CLOUD_LOGGING_ONLY
-  machineType: 'E2_HIGHCPU_8'
+  # machineType: 'E2_HIGHCPU_8'
 
 # Build timeout
 timeout: '1200s'
