add codebuild env trigger

--- a/deploy/cloudrun-staging.yaml
+++ b/deploy/cloudrun-staging.yaml
@@ -1,7 +1,7 @@
 apiVersion: serving.knative.dev/v1
 kind: Service
 metadata:
-  name: microservice-template-staging
+  name: it-user-service-staging
   annotations:
     run.googleapis.com/ingress: all
 spec:
@@ -16,7 +16,7 @@ spec:
       containerConcurrency: 100
       timeoutSeconds: 300
       containers:
-      - image: gcr.io/$PROJECT_ID/microservice-template:latest
+      - image: gcr.io/$PROJECT_ID/it-user-service:latest
         ports:
         - containerPort: 8080
         env:
