--- a/deploy/cloudrun-production.yaml
+++ b/deploy/cloudrun-production.yaml
@@ -16,7 +16,7 @@ spec:
       containerConcurrency: 100
       timeoutSeconds: 300
       containers:
-      - image: gcr.io/$PROJECT_ID/it-user-service:latest
+      - image: gcr.io/$PROJECT_ID/it-user-service:$COMMIT_SHA
         ports:
         - containerPort: 8080
         env:
